use java 21 getFirst method